Se añaden validaciones de datos

--- a/actividades/actividadTres/html/index.html
+++ b/actividades/actividadTres/html/index.html
@@ -54,20 +54,22 @@
                     </div>
                 </form>
             </div>
-
-            <div id="tarjeta" class="row ocultar">
+            <div class="row ocultar" id="tarjeta">
                 <div class="card" style="width: 18rem;">
+                    <img src="../../resources/skyrim.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title" id="cardNombre"> </h5>
-                        <h6 class="card-subtitle mb-2 text-body-secondary" id="cardApellido"> </h6>
-                        <p class="card-text" id="cardTexto"> </p>
+                        <h3 class="card-title" id="cardNombre"></h3>
+                        <h4 class="card-title" id="cardApellido"></h4>
+                        <p class="card-text" id="cardTexto"></p>
+                    </div>
+                    <div class="card-body">
+                        <a href="https://github.com/JhohanBustamante/En-camino" class="card-link">Git Hub</a>
                     </div>
                     <div class="col-12">
                         <button class="btn btn-primary" type="button" onclick="quitar()">Quitar</button>
                     </div>
                 </div>
             </div>
-
         </div>
     </main>
 
