--- a/actividades/actividadTres/html/index.html
+++ b/actividades/actividadTres/html/index.html
@@ -63,10 +63,10 @@
                         <p class="card-text" id="cardTexto"></p>
                     </div>
                     <div class="card-body">
-                        <a href="https://github.com/JhohanBustamante/En-camino" class="card-link">Git Hub</a>
+                        <a href="https://github.com/JhohanBustamante/En-camino" target="_blank" class="card-link">Git Hub</a>
                     </div>
                     <div class="col-12">
-                        <button class="btn btn-primary" type="button" onclick="quitar()">Quitar</button>
+                        <button class="btn btn-primary" type="button" onclick="ocultar()">Quitar</button>
                     </div>
                 </div>
             </div>
@@ -74,7 +74,7 @@
     </main>
 
 
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
