--- a/actividades/actividadTres/html/index.html
+++ b/actividades/actividadTres/html/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-
     <main>
         <div class="container">
             <div class="row">
@@ -22,31 +21,31 @@
                         </div>
                         <div class="col-md-6">
                             <label class="form-label">Primer nombre</label>
-                            <input type="text" class="form-control" id="nombre">
+                            <input type="text" class="form-control" id="nombre" placeholder="obligatorio">
                         </div>
                         <div class="col-md-6">
                             <label class="form-label">Segundo nombre</label>
-                            <input type="text" class="form-control" id="nombreDos">
+                            <input type="text" class="form-control" id="nombreDos" placeholder="opcional">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-6">
                             <label class="form-label">Primer apellido</label>
-                            <input type="text" class="form-control" id="apellido">
+                            <input type="text" class="form-control" id="apellido" placeholder="obligatorio">
                         </div>
                         <div class="col-md-6">
                             <label class="form-label">Segundo apellido</label>
-                            <input type="text" class="form-control" id="apellidoDos">
+                            <input type="text" class="form-control" id="apellidoDos" placeholder="opcional">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-6">
                             <label class="form-label">Año nacimiento</label>
-                            <input type="text" class="form-control" id="anioNac">
+                            <input type="text" class="form-control" id="anioNac" placeholder="obligatorio">
                         </div>
                         <div class="col-md-6">
                             <label class="form-label">Profesión</label>
-                            <input type="text" class="form-control" id="profesion">
+                            <input type="text" class="form-control" id="profesion" placeholder="obligatorio">
                         </div>
                     </div>
                     <div class="col-12">
@@ -80,5 +79,4 @@
         crossorigin="anonymous"></script>
     <script src="../js/index.js"></script>
 </body>
-
 </html>
